--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </body>
     <script type="text/javascript" src="./build/procedural-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="./ui/gpx_tracks.js"></script>
-    <script src="./ui/flyover_latlon.js"></script>
-    <script src="./ui/dem_type.js"></script>
+    <script type="module" src="/ui/gpx_tracks.js"></script>
+    <script type="module" rc="/ui/flyover_latlon.js"></script>
+    <script type="module" src="/ui/dem_type.js"></script>
     <!-- <script type="text/javascript">
         
     </script> -->
