--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="./build/procedural-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script type="module" src="/ui/gpx_tracks.js"></script>
-    <script type="module" rc="/ui/flyover_latlon.js"></script>
+    <script type="module" src="/ui/flyover_latlon.js"></script>
     <script type="module" src="/ui/dem_type.js"></script>
     <!-- <script type="text/javascript">
         
