--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/css/autoComplete.min.css">
         <script src="https://unpkg.com/@tmcw/togeojson"></script>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-        <link href="./styles.css" rel="stylesheet">
+        <link href="/styles.css" rel="stylesheet">
     </head>
 
     <body>
@@ -28,7 +28,7 @@
             <button id="displayLocationBtn">Display Location</button>
         </div>
     </body>
-    <script type="text/javascript" src="./build/procedural-gl.js"></script>
+    <script type="text/javascript" src="/build/procedural-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script type="module" src="/ui/gpx_tracks.js"></script>
     <script type="module" src="/ui/flyover_latlon.js"></script>
