--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
             <button id="displayLocationBtn">Display Location</button>
         </div>
     </body>
-    <script type="text/javascript" src="https://austrian-map-git-main-agrammats-projects.vercel.app/build/procedural-gl.js"></script>
+    <script type="text/javascript" src="./build/procedural-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script type="module" src="https://austrian-map-git-main-agrammats-projects.vercel.app/ui/gpx_tracks.js"></script>
-    <script type="module" src="https://austrian-map-git-main-agrammats-projects.vercel.app/ui/flyover_latlon.js"></script>
-    <script type="module" src="https://austrian-map-git-main-agrammats-projects.vercel.app/ui/dem_type.js"></script>
-    <!-- <script type="text/javascript">
-        
-    </script> -->
+    <script type="module" src="./ui/gpx_tracks.js"></script>
+    <script type="module" src="./ui/flyover_latlon.js"></script>
+    <script type="module" src="./ui/dem_type.js"></script>
 </html>
